# spicedb-rust

./: .envrc  Cargo.toml  Makefile.toml  README.md  build.rs  compose.yaml
.github/workflows/: publish.yml  rust.yml
src/: client.rs  entity.rs  grpc.rs  lib.rs  permission.rs  spicedb.rs
src/permission/: check_permission.rs  delete_relationships.rs  lookup_resources.rs  lookup_subjects.rs  mod.rs  read_relationships.rs  write_relationships.rs
src/permission/requests/: check_permission.rs  delete_relationships.rs  lookup_resources.rs  lookup_subjects.rs  mod.rs  read_relationships.rs  write_relationships.rs
src/schema/: mod.rs
src/spicedb/: helpers.rs  mod.rs  wrappers.rs
tests/: example.rs  schema.zed
