[package]
name = "spicedb-rust"
version = "0.1.0"
edition = "2021"
description = "A client for spicedb"
license = "MIT"

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
mockall = { version = "0.11.3", optional = true }
tokio-stream = "0.1.15"
tonic = "0.10.2"
chrono = "0.4.31"
uuid = "1.6.1"
tonic-reflection = "0.10.2"
anyhow = "1.0.86"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = []

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4", "v7"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
pretty_assertions = "1.4.0"
