[package]
name = "spicedb-rust"
version = "0.3.4"
edition = "2021"
description = "A client for spicedb"
keywords = ["spicedb", "authzed", "authorization"]
repository = "https://github.com/Lur1an/spicedb-rust"
license = "MIT"

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tokio-stream = "0.1.15"
tonic = "0.10.2"
chrono = "0.4.31"
uuid = "1.6.1"
tonic-reflection = "0.10.2"
anyhow = "1.0.86"
futures = "0.3.30"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = []
integration-test = []

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4", "v7"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
pretty_assertions = "1.4.0"
